# audioseal-onnx

./: .gitignore  README.md  pyproject.toml
examples/: basic.py
scripts/: benchmark.py  export.py
src/audioseal_onnx/: __init__.py  decode.py  encode.py
