[project]
name = "audioseal-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
